##########################
# Setup.py Configuration #
##########################
[metadata]
name = dasher
version = 0.14.10-dev
description = Dashboard framework
long_description = file: README.md

# URLs associated with the project
url = https://github.com/cmungall/dasher
download_url = https://github.com/cmungall/dasher/releases
project_urls =
    Bug Tracker = https://github.com/cmungall/dasher/issues
    Source Code = https://github.com/cmungall/dasher
    Documentation = https://cmungall.github.io/dasher/

# Author information
author = Chris Mungall
author_email = cjmungall@lbl.gov
maintainer = Chris Mungall
maintainer_email = cjmungall@lbl.gov

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Ontologies
    Indexing

[options]
install_requires =
    click
    dataclasses
    rdflib

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
jupyter =
    jinja2
    ipython
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    expando = dasher.expando:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = dasher
omit =
    src/dasher/__main__.py
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/dasher
    .tox/*/lib/python*/site-packages/dasher

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
